--- a/public/widget-login.html
+++ b/public/widget-login.html
@@ -22,6 +22,8 @@
 
 <script>
 
+    window.history.pushState("", "", "/cliente.html?w=login");
+
     $("#boton-login").click(function () {
         $.ajax({
             url: URLbase + "/autenticar",
@@ -34,9 +36,11 @@
             success: function (respuesta) {
                 console.log(respuesta.token);
                 token = respuesta.token;
+                Cookies.set('token', respuesta.token);
                 $("#contenedor-principal").load("widget-canciones.html");
             },
             error: function (error) {
+                Cookies.remove('token');
                 $("#widget-login")
                     .prepend("<div class='alert alert-danger'>Usuario no econtrado</div>");
             }
